backend/EconLangParser.py
# Generated from EconLang.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class EconLangParser ( Parser ):

    grammarFileName = "EconLang.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "';'", "'('", "')'", "','", "'{'", "'}'", 
                     "'.'", "'_'", "'['", "']'", "'let'", "'function'", 
                     "'return'", "'if'", "'else'", "'for'", "'in'", "'while'", 
                     "'alert'", "'email'", "'load'", "'csv'", "'json'", 
                     "'forecast'", "'arima'", "'exponential'", "'indicator'", 
                     "'rsi'", "'macd'", "'inflation'", "'agg'", "'mean'", 
                     "'sum'", "'std'", "'from'", "'to'", "'filter'", "'shift'", 
                     "<INVALID>", "<INVALID>", "'not'", "'select'", "'where'", 
                     "'group'", "'by'", "'order'", "'limit'", "'offset'", 
                     "'asc'", "'desc'", "'as'", "'avg'", "'min'", "'max'", 
                     "'count'", "'distinct'", "'all'", "'join'", "'inner'", 
                     "'left'", "'right'", "'full'", "'outer'", "'cross'", 
                     "'natural'", "'on'", "'using'", "'having'", "'qualify'", 
                     "'union'", "'intersect'", "'except'", "'nulls'", "'first'", 
                     "'last'", "'between'", "'like'", "'ilike'", "'is'", 
                     "'null'", "'exists'", "'case'", "'when'", "'then'", 
                     "'end'", "'*'", "'/'", "'+'", "'-'", "'=='", "'='", 
                     "<INVALID>", "'<'", "'>'", "'<='", "'>='" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "LET", "FUNCTION", 
                      "RETURN", "IF", "ELSE", "FOR", "IN", "WHILE", "ALERT", 
                      "EMAIL", "LOAD", "CSV", "JSON", "FORECAST", "ARIMA", 
                      "EXPONENTIAL", "INDICATOR", "RSI", "MACD", "INFLATION", 
                      "AGG", "MEAN", "SUM", "STD", "FROM", "TO", "FILTER", 
                      "SHIFT", "AND", "OR", "NOT", "SELECTKW", "WHEREKW", 
                      "GROUPKW", "BYKW", "ORDERKW", "LIMITKW", "OFFSETKW", 
                      "ASC", "DESC", "AS", "AVG", "MIN", "MAX", "COUNT", 
                      "DISTINCTKW", "ALLKW", "JOINKW", "INNERKW", "LEFTKW", 
                      "RIGHTKW", "FULLKW", "OUTERKW", "CROSSKW", "NATURALKW", 
                      "ONKW", "USINGKW", "HAVINGKW", "QUALIFYKW", "UNIONKW", 
                      "INTERSECTKW", "EXCEPTKW", "NULLS", "FIRST", "LAST", 
                      "BETWEENKW", "LIKEKW", "ILIKEKW", "ISKW", "NULLKW", 
                      "EXISTSKW", "CASEKW", "WHENKW", "THENKW", "ENDKW", 
                      "MUL", "DIV", "ADD", "SUB", "EQEQ", "EQ", "NEQ", "LT", 
                      "GT", "LE", "GE", "ID", "AT_VAR", "NUMBER", "STRING", 
                      "DATE", "WS", "COMMENT", "LINE_COMMENT" ]

    RULE_program = 0
    RULE_statement = 1
    RULE_declaration = 2
    RULE_assignment = 3
    RULE_functionDef = 4
    RULE_paramList = 5
    RULE_ifStatement = 6
    RULE_loopStatement = 7
    RULE_returnStatement = 8
    RULE_block = 9
    RULE_expression = 10
    RULE_orExpr = 11
    RULE_andExpr = 12
    RULE_equalityExpr = 13
    RULE_relationalExpr = 14
    RULE_additiveExpr = 15
    RULE_multiplicativeExpr = 16
    RULE_unaryExpr = 17
    RULE_primary = 18
    RULE_qid = 19
    RULE_functionCall = 20
    RULE_funcName = 21
    RULE_funcArgs = 22
    RULE_caseExpr = 23
    RULE_whenClause = 24
    RULE_elseClause = 25
    RULE_argList = 26
    RULE_arg = 27
    RULE_namedArg = 28
    RULE_dataLoad = 29
    RULE_columns = 30
    RULE_series = 31
    RULE_params = 32
    RULE_period = 33
    RULE_arrayExpr = 34
    RULE_seriesOp = 35
    RULE_window = 36
    RULE_sqlQuery = 37
    RULE_selectCore = 38
    RULE_setOperator = 39
    RULE_tableRef = 40
    RULE_alias = 41
    RULE_joinClause = 42
    RULE_groupByList = 43
    RULE_limitClause = 44
    RULE_selectItems = 45
    RULE_tableStar = 46
    RULE_selectItem = 47
    RULE_aggFunc = 48
    RULE_aggArith = 49
    RULE_aggTerm = 50
    RULE_source = 51
    RULE_idList = 52
    RULE_exprList = 53
    RULE_orderList = 54
    RULE_orderItem = 55

    ruleNames =  [ "program", "statement", "declaration", "assignment", 
                   "functionDef", "paramList", "ifStatement", "loopStatement", 
                   "returnStatement", "block", "expression", "orExpr", "andExpr", 
                   "equalityExpr", "relationalExpr", "additiveExpr", "multiplicativeExpr", 
                   "unaryExpr", "primary", "qid", "functionCall", "funcName", 
                   "funcArgs", "caseExpr", "whenClause", "elseClause", "argList", 
                   "arg", "namedArg", "dataLoad", "columns", "series", "params", 
                   "period", "arrayExpr", "seriesOp", "window", "sqlQuery", 
                   "selectCore", "setOperator", "tableRef", "alias", "joinClause", 
                   "groupByList", "limitClause", "selectItems", "tableStar", 
                   "selectItem", "aggFunc", "aggArith", "aggTerm", "source", 
                   "idList", "exprList", "orderList", "orderItem" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    LET=11
    FUNCTION=12
    RETURN=13
    IF=14
    ELSE=15
    FOR=16
    IN=17
    WHILE=18
    ALERT=19
    EMAIL=20
    LOAD=21
    CSV=22
    JSON=23
    FORECAST=24
    ARIMA=25
    EXPONENTIAL=26
    INDICATOR=27
    RSI=28
    MACD=29
    INFLATION=30
    AGG=31
    MEAN=32
    SUM=33
    STD=34
    FROM=35
    TO=36
    FILTER=37
    SHIFT=38
    AND=39
    OR=40
    NOT=41
    SELECTKW=42
    WHEREKW=43
    GROUPKW=44
    BYKW=45
    ORDERKW=46
    LIMITKW=47
    OFFSETKW=48
    ASC=49
    DESC=50
    AS=51
    AVG=52
    MIN=53
    MAX=54
    COUNT=55
    DISTINCTKW=56
    ALLKW=57
    JOINKW=58
    INNERKW=59
    LEFTKW=60
    RIGHTKW=61
    FULLKW=62
    OUTERKW=63
    CROSSKW=64
    NATURALKW=65
    ONKW=66
    USINGKW=67
    HAVINGKW=68
    QUALIFYKW=69
    UNIONKW=70
    INTERSECTKW=71
    EXCEPTKW=72
    NULLS=73
    FIRST=74
    LAST=75
    BETWEENKW=76
    LIKEKW=77
    ILIKEKW=78
    ISKW=79
    NULLKW=80
    EXISTSKW=81
    CASEKW=82
    WHENKW=83
    THENKW=84
    ENDKW=85
    MUL=86
    DIV=87
    ADD=88
    SUB=89
    EQEQ=90
    EQ=91
    NEQ=92
    LT=93
    GT=94
    LE=95
    GE=96
    ID=97
    AT_VAR=98
    NUMBER=99
    STRING=100
    DATE=101
    WS=102
    COMMENT=103
    LINE_COMMENT=104

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(EconLangParser.EOF, 0)

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(EconLangParser.StatementContext)
            else:
                return self.getTypedRuleContext(EconLangParser.StatementContext,i)


        def getRuleIndex(self):
            return EconLangParser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = EconLangParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 115
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 67560604367682052) != 0) or ((((_la - 81)) & ~0x3f) == 0 and ((1 << (_la - 81)) & 2031619) != 0):
                self.state = 112
                self.statement()
                self.state = 117
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 118
            self.match(EconLangParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def declaration(self):
            return self.getTypedRuleContext(EconLangParser.DeclarationContext,0)


        def assignment(self):
            return self.getTypedRuleContext(EconLangParser.AssignmentContext,0)


        def functionDef(self):
            return self.getTypedRuleContext(EconLangParser.FunctionDefContext,0)


        def ifStatement(self):
            return self.getTypedRuleContext(EconLangParser.IfStatementContext,0)


        def loopStatement(self):
            return self.getTypedRuleContext(EconLangParser.LoopStatementContext,0)


        def returnStatement(self):
            return self.getTypedRuleContext(EconLangParser.ReturnStatementContext,0)


        def expression(self):
            return self.getTypedRuleContext(EconLangParser.ExpressionContext,0)


        def getRuleIndex(self):
            return EconLangParser.RULE_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatement" ):
                listener.enterStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatement" ):
                listener.exitStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStatement" ):
                return visitor.visitStatement(self)
            else:
                return visitor.visitChildren(self)




    def statement(self):

        localctx = EconLangParser.StatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_statement)
        try:
            self.state = 133
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 120
                self.declaration()
                self.state = 121
                self.match(EconLangParser.T__0)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 123
                self.assignment()
                self.state = 124
                self.match(EconLangParser.T__0)
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 126
                self.functionDef()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 127
                self.ifStatement()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 128
                self.loopStatement()
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 129
                self.returnStatement()
                pass

            elif la_ == 7:
                self.enterOuterAlt(localctx, 7)
                self.state = 130
                self.expression()
                self.state = 131
                self.match(EconLangParser.T__0)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeclarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LET(self):
            return self.getToken(EconLangParser.LET, 0)

        def ID(self):
            return self.getToken(EconLangParser.ID, 0)

        def EQ(self):
            return self.getToken(EconLangParser.EQ, 0)

        def expression(self):
            return self.getTypedRuleContext(EconLangParser.ExpressionContext,0)


        def getRuleIndex(self):
            return EconLangParser.RULE_declaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDeclaration" ):
                listener.enterDeclaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDeclaration" ):
                listener.exitDeclaration(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDeclaration" ):
                return visitor.visitDeclaration(self)
            else:
                return visitor.visitChildren(self)




    def declaration(self):

        localctx = EconLangParser.DeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_declaration)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 135
            self.match(EconLangParser.LET)
            self.state = 136
            self.match(EconLangParser.ID)
            self.state = 137
            self.match(EconLangParser.EQ)
            self.state = 138
            self.expression()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AssignmentContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(EconLangParser.ID, 0)

        def EQ(self):
            return self.getToken(EconLangParser.EQ, 0)

        def expression(self):
            return self.getTypedRuleContext(EconLangParser.ExpressionContext,0)


        def getRuleIndex(self):
            return EconLangParser.RULE_assignment

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAssignment" ):
                listener.enterAssignment(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAssignment" ):
                listener.exitAssignment(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAssignment" ):
                return visitor.visitAssignment(self)
            else:
                return visitor.visitChildren(self)




    def assignment(self):

        localctx = EconLangParser.AssignmentContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_assignment)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 140
            self.match(EconLangParser.ID)
            self.state = 141
            self.match(EconLangParser.EQ)
            self.state = 142
            self.expression()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FunctionDefContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def FUNCTION(self):
            return self.getToken(EconLangParser.FUNCTION, 0)

        def ID(self):
            return self.getToken(EconLangParser.ID, 0)

        def block(self):
            return self.getTypedRuleContext(EconLangParser.BlockContext,0)


        def paramList(self):
            return self.getTypedRuleContext(EconLangParser.ParamListContext,0)


        def getRuleIndex(self):
            return EconLangParser.RULE_functionDef

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFunctionDef" ):
                listener.enterFunctionDef(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFunctionDef" ):
                listener.exitFunctionDef(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFunctionDef" ):
                return visitor.visitFunctionDef(self)
            else:
                return visitor.visitChildren(self)




    def functionDef(self):

        localctx = EconLangParser.FunctionDefContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_functionDef)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 144
            self.match(EconLangParser.FUNCTION)
            self.state = 145
            self.match(EconLangParser.ID)
            self.state = 146
            self.match(EconLangParser.T__1)
            self.state = 148
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==97:
                self.state = 147
                self.paramList()


            self.state = 150
            self.match(EconLangParser.T__2)
            self.state = 151
            self.block()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParamListContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(EconLangParser.ID)
            else:
                return self.getToken(EconLangParser.ID, i)

        def getRuleIndex(self):
            return EconLangParser.RULE_paramList

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParamList" ):
                listener.enterParamList(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParamList" ):
                listener.exitParamList(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParamList" ):
                return visitor.visitParamList(self)
            else:
                return visitor.visitChildren(self)




    def paramList(self):

        localctx = EconLangParser.ParamListContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_paramList)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 153
            self.match(EconLangParser.ID)
            self.state = 158
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==4:
                self.state = 154
                self.match(EconLangParser.T__3)
                self.state = 155
                self.match(EconLangParser.ID)
                self.state = 160
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IfStatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IF(self):
            return self.getToken(EconLangParser.IF, 0)

        def expression(self):
            return self.getTypedRuleContext(EconLangParser.ExpressionContext,0)


        def block(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(EconLangParser.BlockContext)
            else:
                return self.getTypedRuleContext(EconLangParser.BlockContext,i)


        def ELSE(self):
            return self.getToken(EconLangParser.ELSE, 0)

        def getRuleIndex(self):
            return EconLangParser.RULE_ifStatement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIfStatement" ):
                listener.enterIfStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIfStatement" ):
                listener.exitIfStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIfStatement" ):
                return visitor.visitIfStatement(self)
            else:
                return visitor.visitChildren(self)




    def ifStatement(self):

        localctx = EconLangParser.IfStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_ifStatement)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 161
            self.match(EconLangParser.IF)
            self.state = 162
            self.match(EconLangParser.T__1)
            self.state = 163
            self.expression()
            self.state = 164
            self.match(EconLangParser.T__2)
            self.state = 165
            self.block()
            self.state = 168
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==15:
                self.state = 166
                self.match(EconLangParser.ELSE)
                self.state = 167
                self.block()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class LoopStatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def FOR(self):
            return self.getToken(EconLangParser.FOR, 0)

        def ID(self):
            return self.getToken(EconLangParser.ID, 0)

        def IN(self):
            return self.getToken(EconLangParser.IN, 0)

        def expression(self):
            return self.getTypedRuleContext(EconLangParser.ExpressionContext,0)


        def block(self):
            return self.getTypedRuleContext(EconLangParser.BlockContext,0)


        def WHILE(self):
            return self.getToken(EconLangParser.WHILE, 0)

        def getRuleIndex(self):
            return EconLangParser.RULE_loopStatement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLoopStatement" ):
                listener.enterLoopStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLoopStatement" ):
                listener.exitLoopStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLoopStatement" ):
                return visitor.visitLoopStatement(self)
            else:
                return visitor.visitChildren(self)




    def loopStatement(self):

        localctx = EconLangParser.LoopStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_loopStatement)
        try:
            self.state = 182
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [16]:
                self.enterOuterAlt(localctx, 1)
                self.state = 170
                self.match(EconLangParser.FOR)
                self.state = 171
                self.match(EconLangParser.ID)
                self.state = 172
                self.match(EconLangParser.IN)
                self.state = 173
                self.expression()
                self.state = 174
                self.block()
                pass
            elif token in [18]:
                self.enterOuterAlt(localctx, 2)
                self.state = 176
                self.match(EconLangParser.WHILE)
                self.state = 177
                self.match(EconLangParser.T__1)
                self.state = 178
                self.expression()
                self.state = 179
                self.match(EconLangParser.T__2)
                self.state = 180
                self.block()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ReturnStatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def RETURN(self):
            return self.getToken(EconLangParser.RETURN, 0)

        def expression(self):
            return self.getTypedRuleContext(EconLangParser.ExpressionContext,0)


        def getRuleIndex(self):
            return EconLangParser.RULE_returnStatement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterReturnStatement" ):
                listener.enterReturnStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitReturnStatement" ):
                listener.exitReturnStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitReturnStatement" ):
                return visitor.visitReturnStatement(self)
            else:
                return visitor.visitChildren(self)




    def returnStatement(self):

        localctx = EconLangParser.ReturnStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_returnStatement)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 184
            self.match(EconLangParser.RETURN)
            self.state = 185
            self.expression()
            self.state = 186
            self.match(EconLangParser.T__0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BlockContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(EconLangParser.StatementContext)
            else:
                return self.getTypedRuleContext(EconLangParser.StatementContext,i)


        def getRuleIndex(self):
            return EconLangParser.RULE_block

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBlock" ):
                listener.enterBlock(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBlock" ):
                listener.exitBlock(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBlock" ):
                return visitor.visitBlock(self)
            else:
                return visitor.visitChildren(self)




    def block(self):
